nav-component + notification component

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
+
 @import './variables';
 @import './reset';
 @import './utils';
 @import './App';
+@import './Navigation';
+@import './Notifications';
 @import './Notification';
-
