--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -8,3 +8,11 @@ $color-grey-2: #3e434b;
 $color-grey-3: #414b50;
 $color-grey-4: #979797;
 $color-grey-5: #fafafa;
+
+
+
+
+$profile-grey-1:#6F8088;
+$progile-grey-2:#59676E;
+$profile-grey-3:#B2CAD6;
+$profile-white-1:white;
