--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -4,11 +4,15 @@
 @import './variables';
 @import './reset';
 @import './utils';
+
 @import './App';
-@import './Header';
 @import './Notifications';
+@import './Search';
+
+@import './Header';
 @import './Notification';
 @import './MapPage';
+@import './SearchItem';
 
 
 @import './features/MapMarker';
