--- a/client/src/scss/_Notification.scss
+++ b/client/src/scss/_Notification.scss
@@ -47,15 +47,14 @@
 }
 
 .trash-icon {
-  width: 40px;
-  height: 40px;
-  background-image: url('/icons/trashbox-icon.svg');
-  background-repeat: no-repeat;
-  background-size: auto 100%;
   cursor: pointer;
-  transition: 0.2s;
+  display: flex;
+  transform: scale(1.5);
 
-  &:hover {
-    background-image: url('/icons/trasbox-icon-hovered.svg');
+  svg path:nth-child(2){
+    transition: 0.2s;
+  }
+  &:hover svg path:nth-child(2){
+    fill: red;
   }
 }
