--- a/client/src/scss/_SearchItem.scss
+++ b/client/src/scss/_SearchItem.scss
@@ -18,6 +18,11 @@
   display: flex;
   align-items: center;
 
+  &.interests{
+    svg{
+      transform: scale(0.8);
+    }
+  }
   svg{
     transform: scale(0.6);
   }
@@ -43,5 +48,6 @@
   .arrow-icon {
     transform: scale(0.8);
     margin-left: 40px;
+    cursor: pointer;
   }
 }
