Spots page and some fixes for user profile page

--- a/client/src/scss/_UserProfile.scss
+++ b/client/src/scss/_UserProfile.scss
@@ -73,6 +73,9 @@
                 .playerdata-rightpart
                 {
                     margin-left: auto;
+                    display: flex;
+                    flex-flow: column nowrap;
+                    justify-content: space-around;
                     .rightpart-item
                     {
                         height:65px;
@@ -81,6 +84,7 @@
                         align-items: center;
                         .icons
                         {
+                            margin-top: 10px;
                             display: flex;
                             .football-icon
                             {
