--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -16,3 +16,6 @@ $profile-grey-1:#6F8088;
 $progile-grey-2:#59676E;
 $profile-grey-3:#B2CAD6;
 $profile-white-1:white;
+
+$spots-grey-1:#C2C2C2;
+$spots-yellow-1:#FFDF00;
