--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -15,6 +15,7 @@
 @import './Notification';
 @import './MapPage';
 @import './SearchItem';
+@import './SpotsPage';
 
 @import './features/MapMarker';
 
