--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -14,7 +14,7 @@
 @import './Notification';
 @import './MapPage';
 @import './SearchItem';
-@import './SpotsPage';
+@import './Spot';
 
 @import './features/MapMarker';
 
