commentArea + bug fixes

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -9,12 +9,14 @@
 @import './Search';
 @import './UserProfile';
 @import './MapPage';
+@import './Spot';
+
 
 @import './Header';
 @import './Notification';
 @import './MapPage';
 @import './SearchItem';
-@import './Spot';
+@import './CommentArea';
 
 @import './features/MapMarker';
 
