--- a/client/src/scss/features/_MapMarker.scss
+++ b/client/src/scss/features/_MapMarker.scss
@@ -22,11 +22,13 @@
           display: flex;
           justify-content: space-around;
 
-          h3 {
+          .spot-name {
             font-size: 20px;
+            text-decoration: none;
+            color: inherit;
           }
 
-          .id {
+          .spot-id {
             font-size: 14px;
             align-self: center;
           }
