--- a/client/src/scss/_Spot.scss
+++ b/client/src/scss/_Spot.scss
@@ -84,15 +84,13 @@
         color: #FFDF00;
       }
       .five-stars {
+        width: 160px;
         display: flex;
         align-items: center;
-        .star-icon {
-          width: 20px;
-          height: 20px;
-          background-image: url('/icons/stars.svg');
-          background-repeat: no-repeat;
-          background-size: auto 100%;
-          margin: 0 2px;
+        justify-content: center;
+
+        svg{
+          transform: scale(0.6);
         }
       }
       .icon {
