--- a/client/src/scss/_SpotList.scss
+++ b/client/src/scss/_SpotList.scss
@@ -1,61 +1,9 @@
-.spotlistblock
+.spotList
 {
+  width: 1200px;
+  margin: 0 auto;
   display: flex;
-  flex-flow: column nowrap;
-  width: 555px;
-  background: $color-grey-2;
-  border-radius: 25px;
-  .header
-  {    
-    margin: 15px;
-    background: $profile-grey-3;
-    border-radius: 26px;
-    .title
-    {
-      margin-top: 10px;
-      text-align: center;
-      font-size: 24px;
-      color: $color-grey-3;
-    }
-    .id
-    {
-      text-align: center;
-      color: $color-grey-3;
-      margin-bottom: 10px;
-    }
-  }
-  .body
-  {
-    align-items: center;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    margin: auto 15px 15px 15px;
-    background: $profile-grey-3;
-    border-radius: 26px;
-    .line
-    {
-      margin: 20px;
-      display: flex;
-      align-items: center;
-      .text
-      {
-        margin: 10px;
-        font-size: 24px;
-        text-align: center;
-        color: $color-grey-3;
-      }
-    }
-    .icon-panel
-    {
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
-      margin: 0 15px 15px 15px;
-      padding: 10px 20px 10px 15px;
-      width: 230px;
-      background: $progile-grey-2;
-      border-radius: 40px;
-    }
-  }
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
