--- a/client/src/scss/_SpotListItem.scss
+++ b/client/src/scss/_SpotListItem.scss
@@ -27,7 +27,6 @@
 
     .title
     {
-      margin-top: 10px;
       text-align: center;
       font-size: 24px;
       color: $color-grey-3;
@@ -36,7 +35,6 @@
     {
       text-align: center;
       color: $color-grey-3;
-      margin-bottom: 10px;
     }
   }
   .body
@@ -56,7 +54,7 @@
       align-items: center;
       .text
       {
-        margin: 10px;
+        margin: 5px;
         font-size: 16px;
         text-align: center;
         color: $color-grey-3;
@@ -70,7 +68,7 @@
       display: flex;
       justify-content: space-between;
       margin:5px;
-      padding: 5px;
+      padding: 5px 8px;
       width:fit-content;
       background: $progile-grey-2;
       border-radius: 40px;
