--- a/client/src/scss/_Spot.scss
+++ b/client/src/scss/_Spot.scss
@@ -8,7 +8,8 @@
   margin-bottom: 10px;
   border-radius: 25px;
   color: $profile-white-1;
-  min-height: 250px;
+  height: fit-content;
+
 
   .top-container {
     .title-block {
