--- a/client/src/scss/_Spot.scss
+++ b/client/src/scss/_Spot.scss
@@ -10,7 +10,6 @@
   color: $profile-white-1;
   height: fit-content;
 
-
   .top-container {
     .title-block {
       display: flex;
@@ -102,7 +101,7 @@
         align-items: center;
         justify-content: center;
 
-        svg{
+        svg {
           transform: scale(0.6);
         }
       }
@@ -119,4 +118,25 @@
       }
     }
   }
+}
+.slider{
+  margin: 20px auto 0 auto;
+  width: 97%;
+
+}
+.slider-item{
+margin: 0 10px;
+overflow: hidden;
+  img{
+    margin: 0 10px;
+    width: 100%;
+    height: 100%;
+  }
+}
+.slick-dots{
+  color: $color-grey-3;
+}
+
+.slick-dots li.slick-active button:before {
+  color: $profile-grey-1;
 }
