--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -20,5 +20,7 @@
 @import './CommentArea';
 
 @import './features/MapMarker';
+@import './features/ArendaModal';
 
 @import './common/components/Loader';
+@import './common/components/Modal';
