--- a/client/src/scss/_Spot.scss
+++ b/client/src/scss/_Spot.scss
@@ -61,6 +61,36 @@
   }
 }
 
+.arenda-params {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+
+  .open-arenda-modal {
+    padding: 8px 10px;
+    background: $profile-grey-3;
+    border-radius: 10px;
+    color: $color-grey-3;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: none;
+    font-size: 14px;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+      transform: scale(1.05) translateY(-3px);
+      box-shadow: 0 2px 5px $color-grey-1;
+    }
+  }
+
+  .administrator-phone {
+    margin-left:  auto;
+    text-align: right;
+  }
+}
+
 .bottom-containter {
   margin-top: 25px;
 
