--- a/client/src/scss/_Spot.scss
+++ b/client/src/scss/_Spot.scss
@@ -119,24 +119,54 @@
     }
   }
 }
-.slider{
-  margin: 20px auto 0 auto;
+.slider {
+  margin: 5px auto;
   width: 97%;
-
 }
-.slider-item{
-margin: 0 10px;
-overflow: hidden;
-  img{
+.slider-item {
+  margin: 0 10px;
+  overflow: hidden;
+  img {
     margin: 0 10px;
     width: 100%;
     height: 100%;
   }
 }
-.slick-dots{
+.slick-dots {
   color: $color-grey-3;
 }
 
 .slick-dots li.slick-active button:before {
   color: $profile-grey-1;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+
+  button {
+    margin: 15px 5px;
+    width: 150px;
+    height: 50px;
+    padding: 0 10px;
+    background: $profile-grey-3;
+    border-radius: 10px;
+    color: $color-grey-3;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: none;
+    font-size: 14px;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+      transform: scale(1.03) translateY(-2px);
+      box-shadow: 0 2px 5px $color-grey-1;
+    }
+
+    span{
+      font-size: 200%;
+    }
+  }
 }
