--- a/client/src/scss/_Notification.scss
+++ b/client/src/scss/_Notification.scss
@@ -20,7 +20,7 @@
         background-color: $color-grey-2;
         opacity: 0.8;
         color: $color-grey-5;
-        width: 180px;
+        width: fit-content;
         text-align: center;
         font-weight: 100;
         border-radius: 12px;
