--- a/client/src/scss/_Header.scss
+++ b/client/src/scss/_Header.scss
@@ -22,7 +22,8 @@ header {
     .nav-separator {
       background-color: $color-blue-3;
       width: 2px;
-      height: 80%;
+      height: 40px;
+      opacity: 0.7;
     }
 
     .nav-icon {
