design modal spotPlayers

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -18,6 +18,7 @@
 @import './SearchItem';
 @import './CommentArea';
 @import './SpotListItem';
+@import './SpotPlayersModal';
 
 @import './features/MapMarker';
 @import './features/ArendaModal';
