--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -21,6 +21,7 @@
 
 @import './features/MapMarker';
 @import './features/ArendaModal';
+@import './features/DonationModal';
 
 @import './common/components/Loader';
 @import './common/components/Modal';
